add basic redo's structure

--- a/src/components/pages/AnnouncementsList.css
+++ b/src/components/pages/AnnouncementsList.css
@@ -1,4 +1,4 @@
-.announcement, .announcement:hover {
+.announcement, .announcement:hover, .announcement:focus {
     outline: none !important;
     border-radius: 12px;
     color: white;
