--- a/src/components/pages/ApplicationsList.css
+++ b/src/components/pages/ApplicationsList.css
@@ -14,14 +14,14 @@
     background-color: #a47bc3;
 }
 .state-two, .state-two:hover, .state-two:focus {
-    background-color: #bd2a1f;
+    background-color: #ec260c;
 }
 .state-three, .state-three:hover, .state-three:focus {
-    background-color: #ec6d00;
+    background-color: #fe8030;
 }
 .state-four, .state-four:hover, .state-four:focus {
-    background-color: #e4a720;
+    background-color: #ffc036;
 }
 .state-five, .state-five:hover, .state-five:focus {
-    background-color: #14773c;
+    background-color: #24bf61;
 }
