--- a/src/components/frame/HeaderComponent.css
+++ b/src/components/frame/HeaderComponent.css
@@ -8,4 +8,23 @@
 .navbar{
     height: 50px;
 }
+.login-button {
+    border-radius: 20px;
+    color: white;
+}
+.login-button:hover {
+    border-radius: 20px;
+    background-color: white;
+    color: black;
+}
+.still-button {
+    border-radius: 20px;
+    background-color: white;
+    color: black;
+}
+.still-button:hover {
+    border-radius: 20px;
+    background-color: black;
+    color: white;
+}
 
